; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/camcontrol/extr_util.c_iget.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/camcontrol/extr_util.c_iget.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.get_hook = type { i64, i64, i32* }

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [32 x i8] c"Expecting an integer argument.\0A\00", align 1
@verbose = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [8 x i8] c"%s: %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @iget(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.get_hook*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = bitcast i8* %7 to %struct.get_hook*
  store %struct.get_hook* %8, %struct.get_hook** %5, align 8
  %9 = load %struct.get_hook*, %struct.get_hook** %5, align 8
  %10 = getelementptr inbounds %struct.get_hook, %struct.get_hook* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load %struct.get_hook*, %struct.get_hook** %5, align 8
  %13 = getelementptr inbounds %struct.get_hook, %struct.get_hook* %12, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = icmp uge i64 %11, %14
  br i1 %15, label %16, label %21

16:                                               ; preds = %2
  %17 = load i32, i32* @stderr, align 4
  %18 = call i32 @fprintf(i32 %17, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str, i64 0, i64 0))
  %19 = call i32 @usage(i32 0)
  %20 = call i32 @exit(i32 1) #3
  unreachable

21:                                               ; preds = %2
  %22 = load %struct.get_hook*, %struct.get_hook** %5, align 8
  %23 = getelementptr inbounds %struct.get_hook, %struct.get_hook* %22, i32 0, i32 2
  %24 = load i32*, i32** %23, align 8
  %25 = load %struct.get_hook*, %struct.get_hook** %5, align 8
  %26 = getelementptr inbounds %struct.get_hook, %struct.get_hook* %25, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = getelementptr inbounds i32, i32* %24, i64 %27
  %29 = load i32, i32* %28, align 4
  %30 = call i32 @strtol(i32 %29, i32 0, i32 0)
  store i32 %30, i32* %6, align 4
  %31 = load %struct.get_hook*, %struct.get_hook** %5, align 8
  %32 = getelementptr inbounds %struct.get_hook, %struct.get_hook* %31, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = add i64 %33, 1
  store i64 %34, i64* %32, align 8
  %35 = load i64, i64* @verbose, align 8
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %49

37:                                               ; preds = %21
  %38 = load i8*, i8** %4, align 8
  %39 = icmp ne i8* %38, null
  br i1 %39, label %40, label %49

40:                                               ; preds = %37
  %41 = load i8*, i8** %4, align 8
  %42 = load i8, i8* %41, align 1
  %43 = sext i8 %42 to i32
  %44 = icmp ne i32 %43, 0
  br i1 %44, label %45, label %49

45:                                               ; preds = %40
  %46 = load i8*, i8** %4, align 8
  %47 = load i32, i32* %6, align 4
  %48 = call i32 @printf(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8* %46, i32 %47)
  br label %49

49:                                               ; preds = %45, %40, %37, %21
  %50 = load i32, i32* %6, align 4
  ret i32 %50
}

declare dso_local i32 @fprintf(i32, i8*) #1

declare dso_local i32 @usage(i32) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @strtol(i32, i32, i32) #1

declare dso_local i32 @printf(i8*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
